degate (0.0.9) unstable; urgency=low

	* Scan for vias on adjacent layers and connect them.
	* Integrated color settings for wires, vias, ... into project settings.
	* Bugfix: Software crashed on opening projects (OS X).
	* Added a new logic model type: EMarker, which are electrically connectable marker objects.
	* Snap gates to a corridor of standard cell placements.
	* Implemented highlighting of adjacent objects.
	* Toggle info rendering with Ctrl-3.
	* Implemented autonaming of standard cells according to their row and column position.
	* Found workaround for texture memory leak on OSX.
	* Fixed sevral rendering problems.
	* Improved Design Rule Checks and the DRC violation dialog.
	* Allow a persistent blacklisting of DRC violations.
	
 -- Martin Schobert <martin@weltregierung.de>  Thu, 26 Aug 2010 12:00:00 +0100
	
degate (0.0.8) unstable; urgency=low

	* Rewritten rendering engine: it uses OpenGL.
	* Added a jpeg image importer.
	* Several bugfixes
	* Merging of standard cell template images. That will increase the recognition rate and reduces false-positive matches.
	* Added global tile cache manager.
	* template matching improved
	* Implemented interface to use external tools for the wire and via matching.
	* Added library and GUI code to perform Design Rule Checks.
	
 -- Martin Schobert <martin@weltregierung.de>  Thu, 15 Apr 2010 09:51:00 +0100

degate (0.0.7) unstable; urgency=low

	* Core completely rewritten in C++. The core is now called libdegate.
	* Degate now uses cmake to build the code.
	* Degate now uses a tile based approach to handle large images.
	* Added basic support for distributed wire tracing.
	* Implemented autosave and restore.
	* Added support for behavioural description of standard cells in VHDL, Verilog and free text.
	* Added support for the autogeneration of VHDL and VHDL testbench code.
	* Support for enabling/disabling and re-ordering of layers added.
	* Annotations (a kind of 2D-boomarks) added.